--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ tmp/
 *.bak
 *.swp
 *~.nib
+*.air
 local.properties
 .classpath
 .settings/
@@ -44,6 +45,7 @@ local.properties
 
 [Dd]ebug/
 [Rr]elease/
+bin-debug/
 x64/
 build/
 [Bb]in/
